--- a/_date/carousel.yml
+++ b/_date/carousel.yml
@@ -1,5 +1,5 @@
 images: 
-  - image: /images/Valdes.jpg
-  - image: /Images/Obama.jpg
-  - image: /Images/Tounge.jpg
-  - image: /Images/Steve.jpg
+  - image: https://joner125.github.io/LukeALike/Images/Valdes.jpg
+  - image: https://joner125.github.io/LukeALike/Images/Obama.jpg
+  - image: https://joner125.github.io/LukeALike/Images/Tounge.jpg
+  - image: https://joner125.github.io/LukeALike/Images/Steve.jpg
