--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,5 +1,5 @@
 images: 
-  - image: /Images/Obama.jpg
-  - image: /Images/Steve.jpg
-  - image: /Images/Tounge.jpg
-  - image: /Images/Valdes.jpg
+  - image: "/Images/Obama.jpg"
+  - image: "/Images/Steve.jpg"
+  - image: "/Images/Tounge.jpg"
+  - image: "/Images/Valdes.jpg"
