--- a/_data/carousel.YML
+++ b/_data/carousel.YML
@@ -1,5 +1,5 @@
 images: 
-  - image: /uploads/slider/image1.jpg
-  - image: /uploads/slider/image2.jpg
-  - image: /uploads/slider/image3.jpg
-  - image: /uploads/slider/image4.jpg
+  - image: /Images/Obama.jpg
+  - image: /Images/Steve.jpg
+  - image: /Images/Tounge.jpg
+  - image: /Images/Valdes.jpg
