--- a/_data/carousel.YML
+++ b/_data/carousel.YML
@@ -1,5 +1,5 @@
 images: 
-  - image: /Images/Obama.jpg
-  - image: /Images/Steve.jpg
-  - image: /Images/Tounge.jpg
-  - image: /Images/Valdes.jpg
+  - image: /images/Obama.jpg
+  - image: /images/Steve.jpg
+  - image: /images/Tounge.jpg
+  - image: /images/Valdes.jpg
