--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,4 +1,4 @@
 images:
-  - image: "/uploads/slider/Obama.jpg"
-  - image: "/uploads/slider/Tounge.jpg"
-  - image: "/uploads/slider/Valdes.jpg"
+  - image: "/uploads/slider/image1.jpg"
+  - image: "/uploads/slider/image2.jpg"
+  - image: "/uploads/slider/image3.jpg"
