--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,4 +1,4 @@
 images:
-  - image: "/uploads/slider/image1.jpg"
-  - image: "/uploads/slider/image2.jpg"
-  - image: "/uploads/slider/image3.jpg"
+  - image: "/lukealike/uploads/slider/image1.jpg"
+  - image: "/lukealike/uploads/slider/image2.jpg"
+  - image: "/lukealike/uploads/slider/image3.jpg"
