--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,4 +1,4 @@
 images:
-  - image: "/LukeALike/uploads/slider/image1.jpg"
-  - image: "/LukeALike/uploads/slider/image2.jpg"
-  - image: "/LukeALike/uploads/slider/image3.jpg"
+  - image: "joner125.github.io/LukeALike/uploads/slider/image1.jpg"
+  - image: "joner125.github.io/LukeALike/uploads/slider/image2.jpg"
+  - image: "joner125.github.io/LukeALike/uploads/slider/image3.jpg"
